# eFlood

./: .augment-guidelines  .gitattributes  .gitignore  .pre-commit-config.yaml  IMPROVEMENTS-ROADMAP.md  LICENCE  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  presentation.html  tailwind.config.js  test_hdf_analysis.py  tsconfig.json  vite.config.ts
.augment/rules/: .augment-guidelines  AI_AGENT_RULES.md  ARCHITECTURE.md  PYTHON_REULES.md
.claude/: settings.local.json
.github/: branch-protection.md  readme-styles.css
.github/workflows/: ci.yml  pr-validation.yml  quality-analysis.yml  release.yml
Page/: README.md  index.html
Page/css/: docs.css  main.css
Page/docs/: index.html
Page/js/: docs.js  main.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_PIPELINE.md  COMMIT_GUIDELINES.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  GIT-LFS-GUIDE.md  IMPROVEMENTS-ROADMAP.md  PRE-COMMIT.md  README-WARNINGS.md  README-WORKFLOW.md  USER_GUIDE.md  WORKFLOW_AUTOMATION.md  pyHMT2D_Guide.md
scripts/: analyze-warnings.js  analyze-warnings.ps1  analyze-warnings.sh  lfs-setup.ps1  lfs-setup.sh  setup-hooks.ps1  setup-hooks.sh  test-precommit.ps1  test-precommit.sh  validate-simple.ps1  validate.ps1  validate.sh
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-python/: .flake8  README.md  __init__.py  boundary_conditions_reader.py  changes.patch  enhanced_boundary_conditions_reader.py  export_tools.py  geometry_tools.py  hdf_data_extractor.py  hdf_reader.py  hydraulic_calc.py  hydraulic_plots.py  hydrograph_exporter.py  manning_extractor.py  pyHMT2D_processor.py  pyproject.toml  raster_converter.py  section_tools.py  test_hdf.py  test_hdf_functionality.py
src-python/CLI/: backend_cli.py  cli_app.py  example_usage.py  hecras_explorer.py  quick_test.py  setup.py
src-python/HECRAS-HDF/: INTEGRATION_REPORT.md  VTK_DOCUMENTATION.md  __about__.py  __common__.py  __init__.py  hecras_processor.py
src-python/HECRAS-HDF/Hydraulic_Models_Data/: __init__.py
src-python/HECRAS-HDF/Hydraulic_Models_Data/Hydraulic_Models_Data_Base/: HydraulicData.py  HydraulicModel.py  __init__.py
src-python/HECRAS-HDF/Hydraulic_Models_Data/RAS_2D/: HEC_RAS_Model.py  RAS_2D_Data.py  helpers.py
src-python/HECRAS-HDF/Misc/: RAS_to_SRH_Converter.py  SRH_to_PINN_points.py  Terrain.py  __init__.py  gmsh2d_to_srh.py  tools.py  vtk_utilities.py
src-python/eflood2_backend/: __init__.py
src-python/eflood2_backend/exporters/: __init__.py  data_exporter.py  hydrograph_exporter.py  raster_exporter.py
src-python/eflood2_backend/integrations/: __init__.py  ras_commander_integration.py
src-python/eflood2_backend/integrations/hecras_hdf/: __about__.py  __common__.py  __init__.py  hecras_processor.py
src-python/eflood2_backend/integrations/hecras_hdf/Hydraulic_Models_Data/Hydraulic_Models_Data_Base/: HydraulicData.py  HydraulicModel.py  __init__.py
src-python/eflood2_backend/integrations/hecras_hdf/Hydraulic_Models_Data/RAS_2D/: HEC_RAS_Model.py  RAS_2D_Data.py  __init__.py  helpers.py
src-python/eflood2_backend/integrations/hecras_hdf/Misc/: RAS_to_SRH_Converter.py  SRH_to_PINN_points.py  Terrain.py  __init__.py  gmsh2d_to_srh.py  tools.py  vtk_utilities.py
src-python/eflood2_backend/integrations/ras_commander/: __init__.py  commander_analysis.py  commander_export.py  commander_flow.py  commander_geometry.py  commander_infrastructure.py  commander_manning.py  commander_project.py  commander_results.py  commander_utils.py
src-python/eflood2_backend/processors/: __init__.py  geometry_processor.py  hydraulic_calculator.py  hydraulic_plotter.py  section_processor.py
src-python/eflood2_backend/readers/: __init__.py  boundary_reader.py  data_extractor.py  hdf_reader.py  manning_reader.py
src-python/eflood2_backend/scripts/: __init__.py  create_test_hdf.py  hdf_complete_analysis.py
src-python/eflood2_backend/utils/: __init__.py  common.py
src-python/test/: README.md  test_analyzer_backend.py  test_backend.py  test_backend_complete.py  test_boundary_conditions.py  test_commander_backend.py  test_complete_integration.py  test_eflood2_backend.py  test_frontend_integration.py  test_frontend_simulation.py  test_hdf_analysis.py  test_hdf_extraction.py  test_landcover_search.py  test_manning_extraction.py  test_manning_integration.py
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: site.webmanifest
src/assets/images/: README.md  index.ts
src/components/: CustomTitlebar.tsx  HDFAnalyzer.tsx  Homepage.tsx  LicenseTitlebar.tsx  OnboardingModal.tsx  PostprocessingViewer.tsx
src/components/HecRas/: index.tsx
src/components/HecRas/Logic/: AnalysisTab.tsx  HydraulicCalculationsTab.tsx  VTKViewerTab.tsx
src/components/HecRas/Logic/Analysis/: BoundaryConditionsViewer.tsx  CompleteDataViewer.tsx  DataAnalyzer.tsx  DataLoader.tsx  HydrographChart.tsx  HydrographViewer.tsx  ManningDebugViewer.tsx  ManningValuesViewer.tsx  ProfessionalManningTable.tsx  SimpleManningTable.tsx  VTKExporter.tsx
src/components/HecRas/UI/: FileUpload.tsx  HecRasHeader.tsx  HecRasMenu.tsx
src/components/analyzer-plus/: index.tsx
src/components/analyzer-plus/Logic/ExportManager/: ExportManagerSection.tsx
src/components/analyzer-plus/Logic/HydrographAnalysis/: HydrographAnalysisSection.tsx
src/components/analyzer-plus/Logic/ManningAnalysis/: ManningAnalysisSection.tsx
src/components/analyzer-plus/UI/: AnalyzerPlusMenu.tsx
src/components/ui/: AnalysisStatus.tsx  BounceCards.tsx  Button.tsx  FlowButton.tsx  Footer.tsx  GlowMenu.tsx  IconButton.tsx  SafeArea.tsx  SimpleAnalysisStatus.tsx  Stepper.tsx  SystemMonitor.tsx  Threads.tsx  context-menu.tsx  data-viewer-modal.tsx  dot-flow.tsx  filesystem.tsx  highlight-multiline.tsx  loader-dot.tsx  loader-flow.tsx  modern-button.tsx  socials.tsx  star-border.tsx  toast.tsx  vtk-export-modal.tsx
src/hooks/: useOutsideClick.ts  useTauri.ts  useToast.ts
src/test/: App.test.tsx  setup.ts
src/types/: tauri.ts
(+2 files in other folders)
